--- a/gb/23/6/7/n14011566.md
+++ b/gb/23/6/7/n14011566.md
@@ -1,7 +1,58 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><ahref="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><ahref="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><ahref="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><ahref="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><ahref="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><ahref="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><ahref="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><ahref="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><ahref="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><ahref="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
-
-<h6></h6>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>组图：南台湾壮观美景 “黄金雨”盛开</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/06/id14011709-2306070719412378-600x400.jpg" />
+<h6>台湾高雄市、屏东县“阿勃勒”黄金雨盛开。（摄影师、手机猎人宋永泰提供）
+</h6>
 <hr>
+	<p>【大纪元2023年06月07日讯】（大纪元记者钟元台湾采访报导）台湾每到夏季是“黄金雨”（阿勃勒，Golden shower tree）盛开的季节，能欣赏到浪漫黄金雨场景。台湾摄影师宋永泰表示，今年南台湾“阿勃勒”绽放盛开，与往年比较，今年满树的花最壮观。</p>
+<p>宋永泰分享高雄市2处、屏东县1处，共3处南台湾赏“阿勃勒”地点。他说，高雄前镇之星站是捷运与轻轨共构，有一条很美的自行车道，“阿勃勒”盛开蔓延在美丽的轻轨周边。现在是“阿勃勒”的盛开期，他建议游客搭轻轨就能欣赏到“阿勃勒”，其实轻轨沿线每一站，都有它的特色，就是高雄美丽的景点。</p>
+<figure id="attachment_14011710" aria-describedby="caption-attachment-14011710" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/06/id14011710-2306070755332378.jpg"><img decoding="async" class="size-large wp-image-14011710" title="组图：南台湾壮观美景 “阿勒勃”黄金雨盛开" src="https://i.epochtimes.com/assets/uploads/2023/06/id14011710-2306070755332378-600x338.jpg" alt="组图：南台湾壮观美景 “阿勒勃”黄金雨盛开" width="600" b="338" /></a><figcaption id="caption-attachment-14011710" class="wp-caption-text">台湾高雄市轻轨前镇之星站“<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e9%98%bf%e5%8b%83%e5%8b%92.md#1">阿勃勒</a>”黄金雨盛开。<ahref="https://www.facebook.com/people/%E5%AE%8B%E6%B0%B8%E6%B3%B0/100001829995306">摄影师、手机猎人宋永泰提供）</a></figcaption></figure>
+<figure id="attachment_14011714" aria-describedby="caption-attachment-14011714" style="width: 337px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/06/id14011714-2306070755352378.jpg"><img decoding="async" class="size-large wp-image-14011714" title="组图：南台湾壮观美景 “阿勒勃”黄金雨盛开" src="https://i.epochtimes.com/assets/uploads/2023/06/id14011714-2306070755352378.jpg" alt="组图：南台湾壮观美景 “阿勒勃”黄金雨盛开" width="337" b="599" /></a><figcaption id="caption-attachment-14011714" class="wp-caption-text">台湾高雄市轻轨前镇之星站“<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e9%98%bf%e5%8b%83%e5%8b%92.md#1">阿勃勒</a>”黄金雨盛开。<ahref="https://www.facebook.com/people/%E5%AE%8B%E6%B0%B8%E6%B3%B0/100001829995306">摄影师、手机猎人宋永泰提供）</a></figcaption></figure>
+<p>“为什么今年阿勃勒花开最壮观？”宋永泰对大纪元表示，因为南台湾很久没有下雨，刚好前一阵子下雨的情况比较密集，可以整个滋润干燥的土地，让这些植物欣欣向荣，也让“阿勃勒”花满开，而且花开的气势很壮观。他还会再去看“阿勃勒”美景，而且坐轻轨看“阿勃勒”很享受。</p>
+<figure id="attachment_14011715" aria-describedby="caption-attachment-14011715" style="width: 337px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/06/id14011715-2306070751462378.jpg"><img decoding="async" class="size-large wp-image-14011715" title="组图：南台湾壮观美景 “阿勒勃”黄金雨盛开" src="https://i.epochtimes.com/assets/uploads/2023/06/id14011715-2306070751462378.jpg" alt="组图：南台湾壮观美景 “阿勒勃”黄金雨盛开" width="337" b="599" /></a><figcaption id="caption-attachment-14011715" class="wp-caption-text">台湾屏东县南州观光糖厂“<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e9%98%bf%e5%8b%83%e5%8b%92.md#1">阿勃勒</a>”黄金雨盛开。<ahref="https://www.facebook.com/people/%E5%AE%8B%E6%B0%B8%E6%B3%B0/100001829995306">摄影师、手机猎人宋永泰提供）</a></figcaption></figure>
+<figure id="attachment_14011712" aria-describedby="caption-attachment-14011712" style="width: 337px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/06/id14011712-2306070755392378.jpg"><img decoding="async" class="size-large wp-image-14011712" title="组图：南台湾壮观美景 “阿勒勃”黄金雨盛开" src="https://i.epochtimes.com/assets/uploads/2023/06/id14011712-2306070755392378.jpg" alt="组图：南台湾壮观美景 “阿勒勃”黄金雨盛开" width="337" b="600" /></a><figcaption id="caption-attachment-14011712" class="wp-caption-text">台湾高雄市轻轨前镇之星站“<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e9%98%bf%e5%8b%83%e5%8b%92.md#1">阿勃勒</a>”黄金雨盛开。<ahref="https://www.facebook.com/people/%E5%AE%8B%E6%B0%B8%E6%B3%B0/100001829995306">摄影师、手机猎人宋永泰提供）</a></figcaption></figure>
+<p>他说，每年6月是凤凰花开学子毕业时节，高雄市林园区公所幸福公园，可以观赏“阿勃勒”及凤凰花同时盛开，“看到黄、红色花争艳，地上落下的黄红花花毯超吸睛”。</p>
+<figure id="attachment_14011723" aria-describedby="caption-attachment-14011723" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/06/id14011723-2306070730162378.jpg"><img decoding="async" class="size-large wp-image-14011723" title="组图：南台湾壮观美景 “阿勒勃”黄金雨盛开" src="https://i.epochtimes.com/assets/uploads/2023/06/id14011723-2306070730162378-600x400.jpg" alt="组图：南台湾壮观美景 “阿勒勃”黄金雨盛开" width="600" b="400" /></a><figcaption id="caption-attachment-14011723" class="wp-caption-text">台湾高雄市林园区公所幸福公园“<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e9%98%bf%e5%8b%83%e5%8b%92.md#1">阿勃勒</a>”黄金雨盛开。<ahref="https://www.facebook.com/people/%E5%AE%8B%E6%B0%B8%E6%B3%B0/100001829995306">摄影师、手机猎人宋永泰提供）</a></figcaption></figure>
+<figure id="attachment_14011722" aria-describedby="caption-attachment-14011722" style="width: 337px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/06/id14011722-2306070730192378.jpg"><img decoding="async" class="size-large wp-image-14011722" title="组图：南台湾壮观美景 “阿勒勃”黄金雨盛开" src="https://i.epochtimes.com/assets/uploads/2023/06/id14011722-2306070730192378.jpg" alt="组图：南台湾壮观美景 “阿勒勃”黄金雨盛开" width="337" b="599" /></a><figcaption id="caption-attachment-14011722" class="wp-caption-text">台湾高雄市林园区公所幸福公园“<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e9%98%bf%e5%8b%83%e5%8b%92.md#1">阿勃勒</a>”黄金雨盛开。<ahref="https://www.facebook.com/people/%E5%AE%8B%E6%B0%B8%E6%B3%B0/100001829995306">摄影师、手机猎人宋永泰提供）</a></figcaption></figure>
+<p>“第3处赏‘阿勃勒’花景点在屏东县南州观光糖厂”，他说，这里是台湾最南端的台糖糖厂，一旁有运动公园网球场，他是常客，打网球已经有将近40年了。他建议可以带家人来这里散步、喝下午茶，当然最重要是赏“阿勃勒”。他推荐这里有特别的树葡萄饮料、麻油面线可以品尝。</p>
+<figure id="attachment_14011713" aria-describedby="caption-attachment-14011713" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/06/id14011713-2306070755372378.jpg"><img decoding="async" class="size-large wp-image-14011713" title="组图：南台湾壮观美景 “阿勒勃”黄金雨盛开" src="https://i.epochtimes.com/assets/uploads/2023/06/id14011713-2306070755372378-600x319.jpg" alt="组图：南台湾壮观美景 “阿勒勃”黄金雨盛开" width="600" b="319" /></a><figcaption id="caption-attachment-14011713" class="wp-caption-text">台湾高雄市轻轨前镇之星站“<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e9%98%bf%e5%8b%83%e5%8b%92.md#1">阿勃勒</a>”黄金雨盛开。<ahref="https://www.facebook.com/people/%E5%AE%8B%E6%B0%B8%E6%B3%B0/100001829995306">摄影师、手机猎人宋永泰提供）</a></figcaption></figure>
+<figure id="attachment_14011719" aria-describedby="caption-attachment-14011719" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/06/id14011719-2306070751412378.jpg"><img decoding="async" class="size-large wp-image-14011719" title="组图：南台湾壮观美景 “阿勒勃”黄金雨盛开" src="https://i.epochtimes.com/assets/uploads/2023/06/id14011719-2306070751412378-600x338.jpg" alt="组图：南台湾壮观美景 “阿勒勃”黄金雨盛开" width="600" b="338" /></a><figcaption id="caption-attachment-14011719" class="wp-caption-text">台湾屏东县南州观光糖厂“<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e9%98%bf%e5%8b%83%e5%8b%92.md#1">阿勃勒</a>”黄金雨盛开。<ahref="https://www.facebook.com/people/%E5%AE%8B%E6%B0%B8%E6%B3%B0/100001829995306">摄影师、手机猎人宋永泰提供）</a></figcaption></figure>
+<figure id="attachment_14011720" aria-describedby="caption-attachment-14011720" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/06/id14011720-2306070751442378.jpg"><img decoding="async" class="size-large wp-image-14011720" title="组图：南台湾壮观美景 “阿勒勃”黄金雨盛开" src="https://i.epochtimes.com/assets/uploads/2023/06/id14011720-2306070751442378-600x325.jpg" alt="组图：南台湾壮观美景 “阿勒勃”黄金雨盛开" width="600" b="325" /></a><figcaption id="caption-attachment-14011720" class="wp-caption-text">台湾屏东县南州观光糖厂“<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e9%98%bf%e5%8b%83%e5%8b%92.md#1">阿勃勒</a>”黄金雨盛开。<ahref="https://www.facebook.com/people/%E5%AE%8B%E6%B0%B8%E6%B3%B0/100001829995306">摄影师、手机猎人宋永泰提供）</a></figcaption></figure>
+<p>“阿勃勒”盛开时，成串的金黄色小花挂枝头，微风吹动时，随风摇曳，又有“<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e9%bb%83%e9%87%91%e9%9b%a8.md#1">黄金雨</a>”美名。在台湾常做为景观树或行道树。“阿勃勒”原产于印度、斯里兰卡等南亚地区，现分布在缅甸、斯里兰卡、印度、台湾及中国南部、西南部等地。</p>
+<p>责任编辑：林妍#</p>
+	
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/30/n13918473.md#1">组图：高雄超美景致——凹子底公园赏落羽松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/13/n13929006.md#1">组图：春天到台湾古坑乡赏樱花之美</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/6/n13944213.md#1">组图：台湾云林赏花秘境 樱花与麝香木比美</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/3/n13964401.md#1">组图：台湾竹林秘境 游客仿佛置身武侠剧场景</a></li>
+<hr>
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/15/n9844503.md#1" target="_blank">毛泽东诗词的“血旗情结”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/21/n11398539.md#1" target="_blank">国际宗教自由委员会副主席：20年的迫害太久</a></li>
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307329.md#1">【百年真相】从资本家到右派 李康年真话代价</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308353.md#1">【马克时空】乌军以牙还牙 越境攻击俄库尔斯克</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307706.md#1">《死侍与金钢狼》票房破9亿 周末有望达10亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296647.md#1">知名医院主治医师：五种癌症可早期预防</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306483.md#1">为何天气炎热时比较不会感觉饿？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307219.md#1">如何去除衣服上的防晒乳污渍？ 这一物有奇效</a></li>
+<hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/6/7/n14011566.htm">组图：南台湾壮观美景 “黄金雨”盛开</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/6/7/n14011566.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
